--- a/DS_C2_SC2_JOSE_LUIS_VAZQUEZ.ipynb
+++ b/DS_C2_SC2_JOSE_LUIS_VAZQUEZ.ipynb
@@ -1,57 +1,176 @@
-import pandas as pd #se importa pandas para poder utilizarlo
-
-def obtenerDatos()
-  #se lee el archivo csv
-  #a. Extraer la información del archivo. 
-  linea = pd.read_csv('country_vaccinations.csv');
-  
-  #b. Mostrar la estructura y tipos de datos de cada columna para identificar qué operaciones puedes realizar con cada una de ellas, asegurándote que las columnas con fechas sean del tipo datetime64.
-  linea[date] = pd.to_datetime(linea[date])
-  linea.info()
-  
-  #c. Determinar la cantidad de vacunas aplicadas de cada compañía (con base en cómo lo reporta cada país en la columna vaccines, en otras palabras, agrupe por vaccines y realice la sumatoria).  
-  print(Total de  vacunas aplicadas por compañía)
-  print(linea['people_vaccinated'].groupby([linea['vaccines']]).sum())
-
-  #d. Obtener la cantidad de vacunas aplicadas en todo el mundo. 
-  print(Total de vacunas aplicadas en todo el mundo)
-  print(linea['people_vaccinated'].sum())
-
-  #e. Calcular el promedio de vacunas aplicadas por país.
-  print(Promedio de vacunas aplicadas por país)
-  print(linea['people_vaccinated'].groupby([linea['country']]).mean())
-  
-  #f. Determinar la cantidad de vacunas aplicadas el día 290121 en todo el mundo.
-  print(Total de vacunas aplicadas el día 290121 en todo el mundo)
-  print(linea['people_vaccinated'].groupby([linea['date']]).sum())
-
-  #g. Crear un dataframe nuevo denominado conDiferencias que contenga los datos originales y una columna derivada (diferencias) con las diferencias de aplicación entre las columnas daily_vaccionations y daily_vaccionations_raw.
-  conDiferencias = linea.copy()#copiando los datos originales para extraer información
-  conDiferencias[daily_vaccinations] = conDiferencias[daily_vaccinations].fillna(0)
-  conDiferencias[daily_vaccinations_raw] = conDiferencias[daily_vaccinations_raw].fillna(0)  
-  conDiferencias[diferencias] = conDiferencias[daily_vaccinations]-conDiferencias[daily_vaccinations_raw]
-
-  #h. Obtener el período de tiempo entre el registro con fecha más reciente y el registro con fecha más antigua.
-  print(Periodo de tiempo entre el registro con fecha más reciente y el registro con fecha más antigua)
-  print(linea['date'].max() - linea['date'].min())
-
-  #i. Crear un dataframe nuevo denominado conCantidad que contenga los datos originales y una columna derivada (canVac) con la cantidad de vacunas utilizadas cada día (usar la columna vaccines y separar por el carácter 
-  conCantidad = linea.copy()#copiando los datos originales para extraer información
-  conCantidad[canVac] = conCantidad[vaccines].str.split(,).str.len()
-
-  #j. Generar un dataframe denominado antes20 con todos los registros que se hayan realizado antes del 20 de diciembre de 2020.
-  antes20 = linea.copy()#copiando los datos originales para extraer información
-  antes20 = antes20[antes20['date']  '2020-12-20']
-
-  #k. Obtener un dataframe denominado pfizer con todos los registros donde se haya utilizado la vacuna Pfizer.
-  pfizer = linea.copy()
-  pfizer = pfizer[pfizer['vaccines'].str.contains('Pfizer')]
-
-  #l. Almacenar los dataframes generados (conDiferencias, conCantidad, antes20 y pfizer) en un archivo de Excel denominado resultadosReto.xlsx, donde cada dataframe ocupe una hoja diferente.
-  with pd.ExcelWriter(DS_C2_SC2_JLVP.xlsx) as writer
-      conDiferencias.to_excel(writer, sheet_name=Con diferencias)
-      conCantidad.to_excel(writer, sheet_name=Con cantidad)
-      antes20.to_excel(writer, sheet_name=Antes del 20)
-      pfizer.to_excel(writer, sheet_name=Pfizer)  
-
-obtenerDatos()
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOjKU1EkSBKTdMfjANPwOU2",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pantaleonvqz/DS_C2_SC2_JOSELUISVAZQUEZ/blob/main/DS_C2_SC2_JOSE_LUIS_VAZQUEZ.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd #se importa pandas para poder utilizarlo\n",
+        "\n",
+        "def obtenerDatos():\n",
+        "  #se lee el archivo csv\n",
+        "  #a. Extraer la información del archivo.\n",
+        "  linea = pd.read_csv('country_vaccinations.csv');\n",
+        "\n",
+        "  #b. Mostrar la estructura y tipos de datos de cada columna para identificar qué operaciones puedes realizar con cada una de ellas, asegurándote que las columnas con fechas sean del tipo datetime64.\n",
+        "  linea[\"date\"] = pd.to_datetime(linea[\"date\"])\n",
+        "  linea.info()\n",
+        "\n",
+        "  #c. Determinar la cantidad de vacunas aplicadas de cada compañía (con base en cómo lo reporta cada país en la columna vaccines, en otras palabras, agrupe por vaccines y realice la sumatoria).\n",
+        "  print(\"Total de  vacunas aplicadas por compañía\")\n",
+        "  print(linea['people_vaccinated'].groupby([linea['vaccines']]).sum())\n",
+        "\n",
+        "  #d. Obtener la cantidad de vacunas aplicadas en todo el mundo.\n",
+        "  print(\"Total de vacunas aplicadas en todo el mundo\")\n",
+        "  print(linea['people_vaccinated'].sum())\n",
+        "\n",
+        "  #e. Calcular el promedio de vacunas aplicadas por país.\n",
+        "  print(\"Promedio de vacunas aplicadas por país\")\n",
+        "  print(linea['people_vaccinated'].groupby([linea['country']]).mean())\n",
+        "\n",
+        "  #f. Determinar la cantidad de vacunas aplicadas el día 29/01/21 en todo el mundo.\n",
+        "  print(\"Total de vacunas aplicadas el día 29/01/21 en todo el mundo\")\n",
+        "  print(linea['people_vaccinated'].groupby([linea['date']]).sum())\n",
+        "\n",
+        "  #g. Crear un dataframe nuevo denominado conDiferencias que contenga los datos originales y una columna derivada (diferencias) con las diferencias de aplicación entre las columnas daily_vaccionations y daily_vaccionations_raw.\n",
+        "  conDiferencias = linea.copy()#copiando los datos originales para extraer información\n",
+        "  conDiferencias[\"daily_vaccinations\"] = conDiferencias[\"daily_vaccinations\"].fillna(0)\n",
+        "  conDiferencias[\"daily_vaccinations_raw\"] = conDiferencias[\"daily_vaccinations_raw\"].fillna(0)\n",
+        "  conDiferencias[\"diferencias\"] = conDiferencias[\"daily_vaccinations\"]-conDiferencias[\"daily_vaccinations_raw\"]\n",
+        "\n",
+        "  #h. Obtener el período de tiempo entre el registro con fecha más reciente y el registro con fecha más antigua.\n",
+        "  print(\"Periodo de tiempo entre el registro con fecha más reciente y el registro con fecha más antigua\")\n",
+        "  print(linea['date'].max() - linea['date'].min())\n",
+        "\n",
+        "  #i. Crear un dataframe nuevo denominado conCantidad que contenga los datos originales y una columna derivada (canVac) con la cantidad de vacunas utilizadas cada día (usar la columna vaccines y separar por el carácter /\n",
+        "  conCantidad = linea.copy()#copiando los datos originales para extraer información\n",
+        "  conCantidad[\"canVac\"] = conCantidad[\"vaccines\"].str.split(\",\").str.len()\n",
+        "\n",
+        "  #j. Generar un dataframe denominado antes20 con todos los registros que se hayan realizado antes del 20 de diciembre de 2020.\n",
+        "  antes20 = linea.copy()#copiando los datos originales para extraer información\n",
+        "  antes20 = antes20[antes20['date'] < '2020-12-20']\n",
+        "\n",
+        "  #k. Obtener un dataframe denominado pfizer con todos los registros donde se haya utilizado la vacuna Pfizer.\n",
+        "  pfizer = linea.copy()\n",
+        "  pfizer = pfizer[pfizer['vaccines'].str.contains('Pfizer')]\n",
+        "\n",
+        "  #l. Almacenar los dataframes generados (conDiferencias, conCantidad, antes20 y pfizer) en un archivo de Excel denominado resultadosReto.xlsx, donde cada dataframe ocupe una hoja diferente.\n",
+        "  with pd.ExcelWriter(\"DS_C2_SC2_JLVP.xlsx\") as writer:\n",
+        "      conDiferencias.to_excel(writer, sheet_name=\"Con diferencias\")\n",
+        "      conCantidad.to_excel(writer, sheet_name=\"Con cantidad\")\n",
+        "      antes20.to_excel(writer, sheet_name=\"Antes del 20\")\n",
+        "      pfizer.to_excel(writer, sheet_name=\"Pfizer\")\n",
+        "\n",
+        "obtenerDatos()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EbskcpWy90Un",
+        "outputId": "9f0a4b0f-9e04-40ce-f6f2-79b5a9ef1aca"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 86512 entries, 0 to 86511\n",
+            "Data columns (total 15 columns):\n",
+            " #   Column                               Non-Null Count  Dtype         \n",
+            "---  ------                               --------------  -----         \n",
+            " 0   country                              86512 non-null  object        \n",
+            " 1   iso_code                             86512 non-null  object        \n",
+            " 2   date                                 86512 non-null  datetime64[ns]\n",
+            " 3   total_vaccinations                   43607 non-null  float64       \n",
+            " 4   people_vaccinated                    41294 non-null  float64       \n",
+            " 5   people_fully_vaccinated              38802 non-null  float64       \n",
+            " 6   daily_vaccinations_raw               35362 non-null  float64       \n",
+            " 7   daily_vaccinations                   86213 non-null  float64       \n",
+            " 8   total_vaccinations_per_hundred       43607 non-null  float64       \n",
+            " 9   people_vaccinated_per_hundred        41294 non-null  float64       \n",
+            " 10  people_fully_vaccinated_per_hundred  38802 non-null  float64       \n",
+            " 11  daily_vaccinations_per_million       86213 non-null  float64       \n",
+            " 12  vaccines                             86512 non-null  object        \n",
+            " 13  source_name                          86512 non-null  object        \n",
+            " 14  source_website                       86512 non-null  object        \n",
+            "dtypes: datetime64[ns](1), float64(9), object(5)\n",
+            "memory usage: 9.9+ MB\n",
+            "Total de  vacunas aplicadas por compañía\n",
+            "vaccines\n",
+            "Abdala, Johnson&Johnson, Oxford/AstraZeneca, Pfizer/BioNTech, Soberana02, Sputnik Light, Sputnik V                            1.079106e+08\n",
+            "Abdala, Moderna, Oxford/AstraZeneca, Pfizer/BioNTech, Sinopharm/Beijing, Sputnik V                                            8.973631e+09\n",
+            "Abdala, Sinopharm/Beijing, Sinovac, Soberana02, Sputnik Light, Sputnik V                                                      2.520805e+08\n",
+            "Abdala, Soberana Plus, Soberana02                                                                                             2.261240e+09\n",
+            "COVIran Barekat, Covaxin, FAKHRAVAC, Oxford/AstraZeneca, Razi Cov Pars, Sinopharm/Beijing, Soberana02, SpikoGen, Sputnik V    5.224707e+09\n",
+            "                                                                                                                                  ...     \n",
+            "Pfizer/BioNTech, Sinovac, Turkovac                                                                                            1.607628e+10\n",
+            "Pfizer/BioNTech, Sputnik V                                                                                                    1.008094e+06\n",
+            "QazVac, Sinopharm/Beijing, Sputnik V                                                                                          2.100178e+09\n",
+            "Sinopharm/Beijing                                                                                                             1.851834e+07\n",
+            "Sinopharm/Beijing, Sputnik V                                                                                                  3.493345e+08\n",
+            "Name: people_vaccinated, Length: 84, dtype: float64\n",
+            "Total de vacunas aplicadas en todo el mundo\n",
+            "731113482252.0\n",
+            "Promedio de vacunas aplicadas por país\n",
+            "country\n",
+            "Afghanistan          2.283978e+06\n",
+            "Albania              7.691666e+05\n",
+            "Algeria              5.667521e+06\n",
+            "Andorra              3.393784e+04\n",
+            "Angola               4.030443e+06\n",
+            "                         ...     \n",
+            "Wales                2.024054e+06\n",
+            "Wallis and Futuna    4.919744e+03\n",
+            "Yemen                3.887164e+05\n",
+            "Zambia               3.126864e+05\n",
+            "Zimbabwe             2.405831e+06\n",
+            "Name: people_vaccinated, Length: 223, dtype: float64\n",
+            "Total de vacunas aplicadas el día 29/01/21 en todo el mundo\n",
+            "date\n",
+            "2020-12-02    0.000000e+00\n",
+            "2020-12-03    0.000000e+00\n",
+            "2020-12-04    1.000000e+00\n",
+            "2020-12-05    0.000000e+00\n",
+            "2020-12-06    0.000000e+00\n",
+            "                  ...     \n",
+            "2022-03-25    2.764019e+09\n",
+            "2022-03-26    2.781163e+09\n",
+            "2022-03-27    2.945374e+09\n",
+            "2022-03-28    2.696730e+09\n",
+            "2022-03-29    2.363749e+09\n",
+            "Name: people_vaccinated, Length: 483, dtype: float64\n",
+            "Periodo de tiempo entre el registro con fecha más reciente y el registro con fecha más antigua\n",
+            "482 days 00:00:00\n"
+          ]
+        }
+      ]
+    }
+  ]
+}
